  - Fix problem with links in notifications generated by modules and the GatherNotifications task
  - Minor fix to notice for module generated content blocks.
  - Fixes the {content_image} tag.
  - prefilters and postfilters can now be displayed in the listtags admin page.
  - Fixes to the get_called_class() method wrt php 5.2

News
  - Fix problem with category parameter

Printing
  - fix a problem with the {print} tag wrt php 5.2

  
Version 1.11 - Galapagos 
-----------------------------
Core - General:
  - Adds new HTML5 frontend sample theme "Simplex" (thanks to Goran)
  - Removed the HasAdminBuffering module method
  - If output buffering is disabled in the request, theme is also disabled
  - Revamp of admin theme base class
  - Adds new OneEleven admin theme (thanks to Goran)
  - Remove the use_adodb_lite config variable
  - Removed the use_smarty_php_tags config variable
  - Remove the process_whole_template config variable
  - Plugins revamp, removed _cms_ from smarty function header. General plugin cleanup
  - Removed smarty plugin {google_search}
  - Moved smarty plugin {search} to Search module
  - Moved smarty plugin {print} to CMSPrinting module
  - Moved smarty plugin {menu} to MenuManager module
  - Moved smarty plugin {news} to News module
  - Added default backend WYSIWYG as a preference
  - Backend WYSIWYG option on add user
  - Smartified editprefs
  - Updated /lib/jquery and cms_jquery plugin with latest jQuery and jQuery UI Frameworks
  - Added jQuery UI Smoothness Stylesheet to NCleanGrey
  - System Information page, and the installer now check for the XMLReader class
  - Admin log ip_addr field is now bigger
  - Admin log now has an index (woot)
  - Modified index.php to handle 404 pages better (Now catches the CmsError404Exception)
  - Static routes are now stored in the cms_routes table, and cached to a file in tmp/cache
  - Rewrote the CmsRoutes class (but maintained compatibility)